add - k8s的配置